# newbiblio

./: .gitignore  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
catalogue/: models.py  serializers.py  urls.py  views.py
catalogue/migrations/: 0001_initial.py  0002_auto_20201202_0915.py
doc/: documentation.md
frontend/: package-lock.json  package.json  views.py
frontend/src/components/: App.js
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
newbiblio/: asgi.py  settings.py  urls.py  wsgi.py
