[tool.poetry]
name = "newbiblio"
version = "0.1.0"
description = "An open source library system based on django and react"
authors = ["Lloyd Meins <dev@lloydmeins.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.3"
react = "^4.3.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
